<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="E_LoggerState" Id="{a7ae18e1-6981-0363-38c8-76b7b44fdc18}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_LoggerState :
(
	IDLE,
	PREPARE_LOG,
	OPEN_FILE,
	WRITE_TO_FILE,
	CLOSE_FILE,
	ERROR
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>